<?xml version="1.0"?>
<package format="2">
  <name>ethercat_interface</name>
  <version>0.0.0</version>
  <description>The ethercat_interface package</description>

  <maintainer email="joost.groenen@nobleo.nl">Joost Groenen</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/ethercat_interface</url> -->

  <author email="joost.groenen@nobleo.nl">Joost Groenen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>ethercat_soem</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>sensor_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>

</package>
